tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/str_to_char.fg
/; EXPECT_ERROR: InitializerExpressionTypeMismatch
const x:char = "hello"

